Library description and README

--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,8 @@
-name=GamerBoy2x16
-version=0.0.1
-author=Filip Daca
-
+name = GamerBoy2x16
+version = 0.0.1
+author = Filip Daca
+maintainer = Filip Daca <filip.hubert.daca@gmail.com>
+sentence = 2x16 LCD display gaming console
+paragraph = Game console engine supporting 2x16 LCD display with custom sprites buffering, piezzo sound, LED HUD, analogue joystick and AB buttons.
+category = Game Console
+url = https://github.com/filip-daca/gamer-boy-2x16
